sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:9: error: '(' expected but '{' found.
      if {ecart==9 || ecart==10}{
         ^AlgCombSort11:12: error: illegal start of simple expression
    }
    ^